<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civPL"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/tvNamePL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/civPL"
                android:text="@string/PL"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNamePL"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civPL">


                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/startDate"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvstartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvStartDate"
                    android:text="@string/sDate"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlStartDate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civPL">


                <TextView
                    android:id="@+id/tvEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/endDate"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvendDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvEndDate"
                    android:text="@string/eDate"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlEndDate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civPL">


                <TextView
                    android:id="@+id/tvMatchday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/matchday"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvmatchDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvMatchday"
                    android:text="@string/matchdayNumber"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15dp" />

            </RelativeLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>